objects/Reporting_Summary__c.object
<CustomObject>
    <description>placeholder for summary calculations used in reporting off different objects</description>
    <fields>
        <fullName>Bookings_LTM__c</fullName>
        <description>obtained by running this report and adjusting date filter to be LTM and using value in Amount in this field.
https://na29.salesforce.com/00O80000005JVfs</description>
        <inlineHelpText>obtained by running this report and adjusting date filter to be LTM and using value in Amount in this field.
https://na29.salesforce.com/00O80000005JVfs</inlineHelpText>
        <label>Bookings LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bookings_Revenue_LTM__c</fullName>
        <formula>Bookings_LTM__c / Revenue_LTM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings/Revenue LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CA_Bookings__c</fullName>
        <label>CA Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CA_Revenue__c</fullName>
        <label>CA Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contracted__c</fullName>
        <label>Contracted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corporate_Engineering_Direct_Margin_LTM__c</fullName>
        <label>Corporate/Engineering Direct Margin LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Year_Contracted__c</fullName>
        <label>Current Year Contracted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Margin_LTM__c</fullName>
        <inlineHelpText>Direct Margin Calculation- Reports
Body	https://na6.salesforce.com/00O80000005JsWr 

https://na6.salesforce.com/00O80000005JsWw 

for $: Numerator- denomonator</inlineHelpText>
        <label>Direct Margin $ LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Margin_Percent_LTM__c</fullName>
        <inlineHelpText>Direct Margin Calculation- Reports
Body	https://na6.salesforce.com/00O80000005JsWr 

https://na6.salesforce.com/00O80000005JsWw 

for %: 1-(numerator report/denomonator report)</inlineHelpText>
        <label>Direct Margin % LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Direct_Margin_on_WIP__c</fullName>
        <description>There is a column at the end %DM 
Next to that, write a new formula:  
%DM *Remaining Revenue field you created for above calculation 
Sum of that is the Direct Margin on WIP</description>
        <label>Direct Margin $ on WIP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Margins_Fixed_Exp__c</fullName>
        <formula>Direct_Margin_LTM__c / Fixed_Exp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Margins/Fixed Exp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Margins_ICOGS__c</fullName>
        <formula>Direct_Margin_LTM__c / Indirects_LTM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Margins/ICOGS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>East_Other_Direct_Margin_LTM__c</fullName>
        <label>East Other Direct Margin LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed_Exp__c</fullName>
        <formula>SG_A_LTM__c + Indirects_LTM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fixed Exp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Handoff_to_CD__c</fullName>
        <label>Handoff to CD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Handoff_to_Mobilization__c</fullName>
        <label>Handoff to Mobilization</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indirects_LTM_Revenue_LTM__c</fullName>
        <formula>Indirects_LTM__c / Revenue_LTM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indirects LTM/Revenue LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Indirects_LTM__c</fullName>
        <description>obtained by running this report and filtering date range for LTM and putting the amount into this field (not report amount but just the amount field)https://na29.salesforce.com/00O80000005JVrA</description>
        <inlineHelpText>obtained by running this report and filtering date range for LTM and putting the amount into this field (not report amount but just the amount field)https://na29.salesforce.com/00O80000005JVrA</inlineHelpText>
        <label>Indirects LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Kickoff_to_CDIFR__c</fullName>
        <label>VSM Kickoff to CDIFR</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kickoff_to_CD__c</fullName>
        <label>Kickoff to CD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kickoff_to_Handoff__c</fullName>
        <label>Kickoff to Handoff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L1_to_Handoff__c</fullName>
        <label>L1 to Handoff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L1_to_Kickoff__c</fullName>
        <label>L1 to Kickoff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L1_to_PTO_Filtered__c</fullName>
        <description>filtered to remove specific projects per COO</description>
        <inlineHelpText>filtered to remove specific projects per COO</inlineHelpText>
        <label>L1 to PTO (Filtered)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L1_to_PTO__c</fullName>
        <label>L1 to PTO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MA_Direct_Margin_LTM__c</fullName>
        <label>MA Direct Margin LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MWs_Actual__c</fullName>
        <inlineHelpText>shows actual MW&apos;s undermanagement, pulled monthly and update from this report:  https://na29.salesforce.com/00O80000005JzWK</inlineHelpText>
        <label>MWs Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MWs_Target__c</fullName>
        <label>MWs Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobilization_to_PTO__c</fullName>
        <label>Mobilization to PTO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobilization_to_Substantial_Completion__c</fullName>
        <label>Mobilization to Mechanical Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January 2015</fullName>
                </value>
                <value>
                    <fullName>February 2015</fullName>
                </value>
                <value>
                    <fullName>March 2015</fullName>
                </value>
                <value>
                    <fullName>April 2015</fullName>
                </value>
                <value>
                    <fullName>May 2015</fullName>
                </value>
                <value>
                    <fullName>June 2015</fullName>
                </value>
                <value>
                    <fullName>July 2015</fullName>
                </value>
                <value>
                    <fullName>August 2015</fullName>
                </value>
                <value>
                    <fullName>September 2015</fullName>
                </value>
                <value>
                    <fullName>October 2015</fullName>
                </value>
                <value>
                    <fullName>November 2015</fullName>
                </value>
                <value>
                    <fullName>December 2015</fullName>
                </value>
                <value>
                    <fullName>January 2016</fullName>
                </value>
                <value>
                    <fullName>February 2016</fullName>
                </value>
                <value>
                    <fullName>March 2016</fullName>
                </value>
                <value>
                    <fullName>April 2016</fullName>
                </value>
                <value>
                    <fullName>May 2016</fullName>
                </value>
                <value>
                    <fullName>June 2016</fullName>
                </value>
                <value>
                    <fullName>July 2016</fullName>
                </value>
                <value>
                    <fullName>August 2016</fullName>
                </value>
                <value>
                    <fullName>September 2016</fullName>
                </value>
                <value>
                    <fullName>October 2016</fullName>
                </value>
                <value>
                    <fullName>November 2016</fullName>
                </value>
                <value>
                    <fullName>December 2016</fullName>
                </value>
                <value>
                    <fullName>January 2017</fullName>
                </value>
                <value>
                    <fullName>February 2017</fullName>
                </value>
                <value>
                    <fullName>March 2017</fullName>
                </value>
                <value>
                    <fullName>April 2017</fullName>
                </value>
                <value>
                    <fullName>May 2017</fullName>
                </value>
                <value>
                    <fullName>June 2017</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NY_Bookings__c</fullName>
        <label>NY Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NY_Direct_Margin_LTM__c</fullName>
        <label>NY Direct Margin LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NY_Revenue__c</fullName>
        <label>NY Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_England_Bookings__c</fullName>
        <label>New England Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_England_Revenue__c</fullName>
        <label>New England Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>O_M_Direct_Margin_LTM__c</fullName>
        <label>O&amp;M Direct Margin LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oakland_Direct_Margin_LTM__c</fullName>
        <label>Oakland Direct Margin LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Direct_Margin_LTM__c</fullName>
        <label>Other Direct Margin LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Size_LTM__c</fullName>
        <description>obtained by adjusting date filter for LTM each month from this report and using column system size, entering that value into this field.
https://na29.salesforce.com/00O80000005JVfs</description>
        <inlineHelpText>obtained by adjusting date filter for LTM each month from this report and using column system size, entering that value into this field.https://na29.salesforce.com/00O80000005JVfs</inlineHelpText>
        <label>Project Size LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Revenue_on_WIP__c</fullName>
        <description>Email Marlise and Tom for the WIP 
Open WIP and go to Wip 2.0 tab (red) 
Next to column T (Accumulated Revenue), create a new column with formula 
Revised Contract value - Accumulated Revenue 
To get the total Remaining Revenue on the WIP, you have to delete some of the &quot;summary&quot; values- Anywhere Job Number = XXX 
Sum up this column 
THIS IS YOUR REMAINING REVENUE ON THE WIP</description>
        <label>Remaining Revenue on WIP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_LTM__c</fullName>
        <description>obtained by running this report and adjusting date filter for LTM, using field Total $$ amount, posting in this field.
https://na29.salesforce.com/00O80000005JUmJ</description>
        <inlineHelpText>obtained by running this report and adjusting date filter for LTM, using field Total $$ amount, posting in this field.
https://na29.salesforce.com/00O80000005JUmJ</inlineHelpText>
        <label>Revenue LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SGA_Revenue_LTM__c</fullName>
        <formula>SG_A_LTM__c / Revenue_LTM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SGA LTM/Revenue LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SG_A_LTM__c</fullName>
        <label>SG&amp;A LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>San_Diego_Direct_Margin_LTM__c</fullName>
        <label>San Diego Direct Margin LTM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Substantial_to_PTO__c</fullName>
        <label>Mechanical Completion to PTO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VSM_Award_to_Close__c</fullName>
        <label>VSM Award to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VSM_CDIFR_to_MOB_Onsite__c</fullName>
        <label>VSM CDIFR to MOB- Onsite</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VSM_CDIFR_to_MOB__c</fullName>
        <label>VSM CDIFR to MOB-Dev</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VSM_HO_to_CDIFR_Dev__c</fullName>
        <label>VSM HO to CDIFR- Dev</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VSM_HO_to_CDIFR_Onsite__c</fullName>
        <label>VSM HO to CDIFR- Onsite</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VSM_KO_to_HO_Dev__c</fullName>
        <label>VSM KO to HO- Dev</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VSM_KO_to_HO__c</fullName>
        <label>VSM KO to HO- Onsite</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VSM_Kickoff_to_CDIFR_Onsite__c</fullName>
        <label>VSM Kickoff to CDIFR- Onsite</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VSM_Kickoff_to_Mob__c</fullName>
        <label>VSM Kickoff to Mob</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VSM_MOB_to_PTO_Dev__c</fullName>
        <label>VSM MOB to PTO- Dev</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VSM_MOB_to_PTO_Onsite__c</fullName>
        <label>VSM MOB to PTO- Onsite</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VSM_Qualification_to_KO_Dev__c</fullName>
        <label>VSM Qualification to KO- Dev</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VSM_Qualification_to_KO_Onsite__c</fullName>
        <label>VSM Qualification to KO- Onsite</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VSM_Qualification_to_PTO_Dev__c</fullName>
        <label>VSM Qualification to PTO-Dev</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VSM_Qualification_to_PTO_Onsite__c</fullName>
        <label>VSM Qualification to PTO-Onsite</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VSM_RFI_Response_Time__c</fullName>
        <label>VSM RFI Response Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WDG_Bookings__c</fullName>
        <label>WDG Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WDG_Revenue__c</fullName>
        <label>WDG Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2015-2016</fullName>
                </value>
                <value>
                    <fullName>2016-2017</fullName>
                </value>
                <value>
                    <fullName>2012-2013</fullName>
                </value>
                <value>
                    <fullName>2014-2015</fullName>
                </value>
                <value>
                    <fullName>2013-2014</fullName>
                </value>
                <value>
                    <fullName>2017-2018</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reporting Summary</label>
    <listViews>
        <fullName>COO_Dash</fullName>
        <columns>NAME</columns>
        <columns>Month__c</columns>
        <columns>L1_to_Kickoff__c</columns>
        <columns>Kickoff_to_Handoff__c</columns>
        <columns>Handoff_to_CD__c</columns>
        <columns>L1_to_PTO_Filtered__c</columns>
        <columns>Mobilization_to_PTO__c</columns>
        <columns>Substantial_to_PTO__c</columns>
        <columns>Kickoff_to_CD__c</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>COO Dash</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>COO_Dash_Margins</fullName>
        <columns>NAME</columns>
        <columns>Month__c</columns>
        <columns>Other_Direct_Margin_LTM__c</columns>
        <columns>Corporate_Engineering_Direct_Margin_LTM__c</columns>
        <columns>East_Other_Direct_Margin_LTM__c</columns>
        <columns>MA_Direct_Margin_LTM__c</columns>
        <columns>NY_Direct_Margin_LTM__c</columns>
        <columns>O_M_Direct_Margin_LTM__c</columns>
        <columns>Oakland_Direct_Margin_LTM__c</columns>
        <columns>San_Diego_Direct_Margin_LTM__c</columns>
        <filterScope>Everything</filterScope>
        <label>COO Dash Margins</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>This_year</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Indirects_LTM_Revenue_LTM__c</columns>
        <columns>Direct_Margin_on_WIP__c</columns>
        <columns>Direct_Margin_LTM__c</columns>
        <columns>Direct_Margin_Percent_LTM__c</columns>
        <columns>Indirects_LTM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2017-2018</value>
        </filters>
        <label>This year</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>VSM</fullName>
        <columns>NAME</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>VSM_Qualification_to_PTO_Dev__c</columns>
        <columns>VSM_Qualification_to_PTO_Onsite__c</columns>
        <columns>VSM_Qualification_to_KO_Dev__c</columns>
        <columns>VSM_Qualification_to_KO_Onsite__c</columns>
        <columns>VSM_KO_to_HO_Dev__c</columns>
        <columns>VSM_KO_to_HO__c</columns>
        <columns>VSM_HO_to_CDIFR_Dev__c</columns>
        <columns>VSM_HO_to_CDIFR_Onsite__c</columns>
        <columns>VSM_CDIFR_to_MOB__c</columns>
        <columns>VSM_CDIFR_to_MOB_Onsite__c</columns>
        <columns>VSM_MOB_to_PTO_Dev__c</columns>
        <columns>VSM_MOB_to_PTO_Onsite__c</columns>
        <filterScope>Everything</filterScope>
        <label>VSM</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Reporting Summary</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>